code25_all/scala/7223012.txt
Regex.MatchIterator
¤ scala
Welcome to Scala version 2.7.7final (OpenJDK 64-Bit Server VM, Java 1.6.0_20).
Type in expressions to have them evaluated.
Type :help for more information.

scala> "a".r.findAllIn("a").size  
<console>:5: error: value size is not a member of scala.util.matching.Regex.MatchIterator
       "a".r.findAllIn("a").size
                            ^

scala> "a".r.findAllIn("a").size()
<console>:5: error: value size is not a member of scala.util.matching.Regex.MatchIterator
       "a".r.findAllIn("a").size()
                            ^

